# apollo

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml
apollo/: Cargo.toml
apollo/benches/: check_benches.rs  movegen_benches.rs
apollo/src/: attacks.rs  bitboard.rs  engine.rs  lib.rs  main.rs  movegen.rs  moves.rs  position.rs  uci.rs  zobrist.rs
apollo/src/engine/: mod.rs  threads.rs  trans_table.rs
apollo/src/search/: alpha_beta.rs  eval.rs  mod.rs
apollo/src/uci/: commands.rs  mod.rs  responses.rs
apollo/tests/: check_and_endgame_tests.rs  fen_tests.rs  move_application_tests.rs  move_gen_tests.rs  perft_correctness.rs  position_misc_tests.rs
apollo_cli/: Cargo.toml
apollo_cli/src/: logger.rs  main.rs  uci.rs
apollo_cli/src/engine/: mod.rs  threads.rs  trans_table.rs
apollo_cli/src/search/: alpha_beta.rs  eval.rs  mod.rs
apollo_engine/: Cargo.toml
apollo_engine/benches/: check_benches.rs  movegen_benches.rs
apollo_engine/src/: attacks.rs  bitboard.rs  lib.rs  movegen.rs  moves.rs  position.rs  slides.rs  types.rs  zobrist.rs
apollo_engine/tests/: check_and_endgame_tests.rs  check_tests.rs  fen_tests.rs  move_application_tests.rs  move_gen_tests.rs  perft_correctness.rs  (+1 more)
apollo_perft/: Cargo.toml
apollo_uci/: Cargo.toml
apollod/: go.mod  go.sum  main.go
benches/: benchmarks.rs
server/: go.mod  go.sum  main.go  server.go  uci.go  uci_test.go
src/: analysis.rs  attacks.rs  bitboard.rs  lib.rs  move_generator.rs  moves.rs  perft.rs  position.rs  types.rs  uci.rs  zobrist.rs
(+30 files in other folders)
