[package]
name = "apollo"
version = "0.3.0"
authors = ["Sean Gillespie <sean@swgillespie.me>"]
edition = "2018"

[dependencies]
num-traits = "0.2"
num-derive = "0.2.5"
lazy_static = "1.3.0"
# bitflags pinned to this specific version to work around RLS ICE:
# https://github.com/rust-lang/rust/issues/59134#issuecomment-489430178
bitflags = "=1.0.4"
arrayvec = "0.4.10"
rayon = "1.0.3"
clap = "2.33.0"
hashbrown = "0.3.0"
log = "0.4.6"
env_logger = "0.6.1"
csv = "1"
serde = "1.0.91"
serde_derive = "1.0.91"

[dev-dependencies]
criterion = "0.2"

[profile.release]
debug-assertions = false

[[bench]]
name = "benchmarks"
harness = false
